refactoring / support dynamic keyboard layouts

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ build
 /examples/qmlapp/qmlappdemo.pro.user.3.3-pre1
 /examples/qmlapp/*.exe
 /examples/qmlapp/qmlappdemo.pro.user
+.qmake.stash
+src/*.o
+src/*.so
