add qrc and moc files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 build
 /src/virtualkeyboard.pro.user
+/src/moc*
+/src/qrc*
 /examples/qmlapp/qmlappdemo.pro.user.3.3-pre1
 /examples/qmlapp/*.exe
 /examples/qmlapp/qmlappdemo.pro.user
